<resources>
    <string name="app_name">Bootcamp_day1</string>
    <string name="action_settings">Settings</string>
    <string name="input_text">Enter text here</string>
    <string name="input_text_land">Landscape: Enter text here</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_purge">Purge</string>
    <string name="username_key">username</string>
    <string name="username">User Name</string>
    <string name="password_key">password</string>
    <string name="password">Password</string>
    <string name="interval_key">interval</string>
    <string name="refresh_interval">Refresh Interval</string>
</resources>
