<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example_lab1.bootcamp.bootcamp_day1.StatusActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"
        />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_purge"
        android:orderInCategory="90"
        app:showAsAction="never"
        android:title="@string/action_purge"/>

    <item
        android:id="@+id/action_post"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="ifRoom"
        android:title="Post"/>
</menu>
